2000-07-01  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm: (archive_chunk)  Use existing
    Mj::List routines to retrieve messages in 'immediate' mode.

2000-06-30  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm: Formatting rewrite; override Mj::Format 
	routines for the showtokens, tokeninfo, and who commands.

	* lib/Majordomo.pm:
	(faq_start, info_start, intro_start) Remove temporary files.
	(createlist) Use "newlist" variable instead of "list."
    (sessioninfo) Rename to sessioninfo_start.  Treat
	sessioninfo as an iterated core routine.
    (showtokens) Allow tokens shown to be limited to a
	particular command.  Include the size of the spool
	file in the output for posted messages.

2000-06-27  Michael Yount <csf@moscow.com>

	Use new core function calling conventions.

2000-06-26  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (createlist): Return values were done
	improperly for some reason.

	* lib/Mj/BounceParser.pm: Renamed from Bf/Parser.pm.

2000-06-25  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/List.pm (bounce_gen_stats): Fixed calculation of overload
	stats.

	* Rotated old ChangeLog entries.
